@@ -10,6 +10,7 @@ XX/XX/XX
 * Fixed PLTSOLVD keyword that was not correctly propagated (#1807)
 * Fixed crash in seqstarnet (#1814)
 * Fixed seqpsf bug preventing astrometric registration in some circumstances (#1815)
+* Fixed issue with RGB composition not always applying registration (!948)
 
 **Improvements**
 * Support arbitrary script categories in the GtkTreeView in script preferences
